--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,4 @@
+version: 2
 jobs:
   build:
     working_directory: ~/app
@@ -8,11 +9,13 @@ jobs:
     steps:
       - checkout
       - run:
+          name: install libs
           command: |
             python3 -m venv venv
             . venv/bin/activate
             pip install -r requirements.txt
       - run:
+          name: run tests
           command: |
             . venv/bin/activate
             python test_app.py
