--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,3 +19,7 @@ jobs:
           command: |
             . venv/bin/activate
             python app/test_app.py
+      - run:
+          name: deploy on heroku
+          command: |
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
